FEM: test files moved one level up

--- a/tfem/bhatti/CMakeLists.txt
+++ b/tfem/bhatti/CMakeLists.txt
@@ -17,18 +17,19 @@
 ########################################################################
 
 SET(TESTS
-  ex14
-  ex15
-  ex16
-  ex46
-  ex48
-  ex411
-  ex42
-  ex53
-  ex622
-  ex77
-  ex79
-  ex81)
+  adv_ex_03_01
+  ex_01_04
+  ex_01_05
+  ex_01_06
+  ex_04_02
+  ex_04_06
+  ex_04_08
+  ex_04_11
+  ex_05_03
+  ex_06_22
+  ex_07_07
+  ex_07_09
+  ex_08_01)
 
 IF(FEM_FOUND)
 	FOREACH(var ${TESTS})
