--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ SET(FLAGS  "")
 SET(LIBS   "")
 SET(LFLAGS "")
 
-IF(PYTHONLIBS_FOUND)
+IF(PYTHONLIBS_FOUND AND MAKE_PYTHON_MODULE)
 	INCLUDE_DIRECTORIES (${PYTHON_INCLUDE_PATH})
 	EXECUTE_PROCESS (COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
 	FIND_LIBRARY (BOOST_PYTHON NAMES boost_python-mt PATHS /usr/lib)
@@ -119,7 +119,7 @@ IF(PYTHONLIBS_FOUND)
 		FIND_LIBRARY (BOOST_PYTHON NAMES boost_python PATHS /usr/lib)
 	ENDIF(NOT BOOST_PYTHON)
 	SET(LIBS ${LIBS} ${PYTHON_LIBRARIES} ${BOOST_PYTHON})
-ENDIF(PYTHONLIBS_FOUND)
+ENDIF(PYTHONLIBS_FOUND AND MAKE_PYTHON_MODULE)
 
 IF(Boost_FOUND)
 	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
@@ -196,6 +196,14 @@ ENDIF(TETGEN_FOUND)
 IF(MTL_FOUND)
 	INCLUDE_DIRECTORIES(${MTL_INCLUDE_DIRS})
 ENDIF(MTL_FOUND)
+
+IF(GSL_FOUND)
+	INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})
+ENDIF(GSL_FOUND)
+
+IF(BLITZ_FOUND)
+	INCLUDE_DIRECTORIES(${BLITZ_INCLUDE_DIRS})
+ENDIF(BLITZ_FOUND)
 
 ########################################################################### FEM
 
