DEM: New way to introduce properties for particles with dictionaries allow the triaxial test to have slippery walls, also teh user interaction is by an input file eith the parameters of the simulation included

--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -25,7 +25,8 @@ SET(EXES
   test_voro01
   test_voro02
   test_voro03
-  test_triaxial01)
+  test_triaxial01
+  test_triaxial02)
 
 SET(TESTS
   test_distances)
