Some more changes to the finding modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,6 @@ OPTION(MAKE_ALL_WARNINGS  "Make with all warnings (-Wall)"                    OF
 OPTION(MAKE_DEBUG_SYMBOLS "Make with debug symbols (-g)"                      OFF)
 OPTION(MAKE_PROFILING     "Make with profiling information (-pg)"             OFF)
 OPTION(MAKE_OPTIMIZED     "Make optimized (-O3)"                              ON)
-OPTION(MAKE_STATIC        "Make static (-static)"                             ON)
 OPTION(MAKE_PYTHON_MODULE "Create python module (mechsys)"                    OFF)
 OPTION(MAKE_TST           "Compile tests"                                     OFF)
 OPTION(MAKE_TFEM          "Compile FEM tests"                                 OFF)
@@ -141,6 +140,9 @@ ELSE(GOTOBLAS_FOUND)
 	IF(LAPACK_FOUND)
 		SET(LIBS  ${LIBS}  ${LAPACK_LIBRARIES})
 		SET(LINALG_FOUND TRUE)
+	ELSE(LAPACK_FOUND)
+		INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindLAPACK.cmake)
+		SET(LIBS  ${LIBS} "blas" ${LAPACK_LIBRARIES} "gfortran")
 	ENDIF(LAPACK_FOUND)
 ENDIF(GOTOBLAS_FOUND)
 
