DEM: Modules and CMakeLsit.txt changed and now mechsys works in supercomputer enviroments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,7 +142,7 @@ ELSE(GOTOBLAS_FOUND)
 		SET(LINALG_FOUND TRUE)
 	ELSE(LAPACK_FOUND)
 		INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindLAPACK.cmake)
-		SET(LIBS  ${LIBS} "blas" ${LAPACK_LIBRARIES} "gfortran")
+		SET(LIBS ${LIBS} ${LAPACK_LIBRARIES} "gfortran")
 	ENDIF(LAPACK_FOUND)
 ENDIF(GOTOBLAS_FOUND)
 
