DEM: domain organized, now triaxial test is a new derived class, also new parameters included in the parameters file

--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -25,8 +25,7 @@ SET(EXES
   test_voro01
   test_voro02
   test_voro03
-  test_triaxial01
-  test_triaxial02)
+  triaxial_test)
 
 SET(TESTS
   test_distances)
