GUI::PlotXY added

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -17,6 +17,7 @@
 ########################################################################
 
 SET(PROGS_A # tests requiring FLTK
+  tplotxy
   )
 
 SET(PROGS_B # tests requiring CGAL
