--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -40,6 +40,10 @@ SET(PROGS_F # mesh
   mesh01
   mesh02)
 
+SET(PROGS_G # tests requiring wxWidgets
+  wxplotxy
+  )
+
 IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND FLTK_FOUND)
 	FOREACH(var ${PROGS_A})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
@@ -84,3 +88,11 @@ IF(TETGEN_FOUND AND TRIANGLE_FOUND)
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
 ENDIF(TETGEN_FOUND AND TRIANGLE_FOUND)
+
+IF(wxWidgets_FOUND)
+	FOREACH(var ${PROGS_G})
+		ADD_EXECUTABLE        (${var} "${var}.cpp")
+		TARGET_LINK_LIBRARIES (${var} ${LIBS})
+		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
+	ENDFOREACH(var)
+ENDIF(wxWidgets_FOUND)
