--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ INCLUDE(FindThreads)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindUseBLITZ.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindGOTOBLAS.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindUMFPACK.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindHDF5.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLU.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLUD.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMPICXX.cmake)
@@ -157,6 +158,13 @@ IF(UMFPACK_FOUND)
 	SET(FLAGS "${FLAGS} -DHAVE_UMFPACK")
 	SET(LIBS   ${LIBS} ${UMFPACK_LIBRARIES})
 ENDIF(UMFPACK_FOUND)
+
+IF(HDF5_FOUND)
+	INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
+	SET(FLAGS "${FLAGS}")
+	SET(LIBS   ${LIBS} ${HDF5_LIBRARIES})
+ENDIF(HDF5_FOUND)
+
 
 IF(SUPERLU_FOUND)
 	INCLUDE_DIRECTORIES(${SUPERLU_INCLUDE_DIRS})
