New SZIP cmake module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,7 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindUseBLITZ.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindGOTOBLAS.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindUMFPACK.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindHDF5.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSZIP.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLU.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLUD.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMPICXX.cmake)
