LinAlg, MTL4, and matvec.h: use of method .size() removed since revision r5095 of MTL4 removed this method. Now we have to use size(V), instead of V.size()

--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -17,6 +17,7 @@
 ########################################################################
 
 SET(EXES
+  nonconvex
   ttt
   test_distances
   test_domain
