--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -17,7 +17,7 @@
 ########################################################################
 
 SET(EXES
-  #nonconvex
+  nonconvex
   ttt
   test_distances
   test_domain
