FEM: Nonlinear tests organized

--- a/tfem/nonlinear/CMakeLists.txt
+++ b/tfem/nonlinear/CMakeLists.txt
@@ -20,7 +20,8 @@ SET(TESTS
   owen_hinton_01
   owen_hinton_02
   owen_salonen
-  nayak_zienk_01)
+  nayak_zienk_01
+  ep_test)
 
 FOREACH(var ${TESTS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
