--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -29,7 +29,10 @@ SET(EXES
   brazil_test
   figure
   test_01
-  test_02)
+  test_02
+  test_comm01
+  test_comm02
+  generate_hdf5)
 
 SET(TESTS
   test_distances)
