FEM: oneelem test added. plotting of thick cylinder test results improved (not working yet)

--- a/tfem/CMakeLists.txt
+++ b/tfem/CMakeLists.txt
@@ -20,7 +20,8 @@ SET(TESTS
   arch
   beam01
   beam02
-  labtest)
+  labtest
+  oneelem)
 
 FOREACH(var ${TESTS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
