--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,7 +40,8 @@ SET(PROGS_D # other tests
 SET(PROGS_F # mesh
   mesh01
   mesh02
-  mesh03)
+  mesh03
+  delaunay)
 
 SET(PROGS_G # tests requiring wxWidgets
   wxplotxy
