LBM: Now the interaction constant with solids is different for each cell

--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -32,8 +32,7 @@ SET(EXES
   test_02
   test_comm01
   test_comm02
-  generate_hdf5
-  bearing_capacity)
+  generate_hdf5)
 
 SET(TESTS
   test_distances)
