FEM: abbo sloan test 02 added (not working yet). shape functions test added

--- a/tfem/CMakeLists.txt
+++ b/tfem/CMakeLists.txt
@@ -21,7 +21,8 @@ SET(TESTS
   beam01
   beam02
   labtest
-  oneelem)
+  oneelem
+  shapefun)
 
 FOREACH(var ${TESTS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
