--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -97,3 +97,6 @@ IF(wxWidgets_FOUND)
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
 ENDIF(wxWidgets_FOUND)
+
+
+SUBDIRS(models vtk)
