Makefiles: Some optional libraries are now in DEPS, but flags to activate/deactivated were added to the main CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,9 @@ OPTION(A_WITH_OPTIONAL      "Make with optional dependencies"                   
 
 # Options
 OPTION(A_USE_MPI            "Compile parallel code with OpenMPI ?"              OFF)
-OPTION(A_OPTIMIZE_DEM_MEM   "Optimize DEM code for memory instead of speed"     OFF)
+OPTION(A_USE_VTK            "Use visualisation toolkit ?"                       OFF)
+OPTION(A_USE_WXW            "Use wxWidgets ?"                                   OFF)
+OPTION(A_OPT_DEM_MEM        "Optimize DEM code for memory instead of speed"     OFF)
 
 # needed when building Debian package
 IF(NOT INSTALL_ROOT)
@@ -70,10 +72,6 @@ ENDIF(A_MAKE_PROFILING)
 IF(A_MAKE_OPTIMIZED)
 	ADD_DEFINITIONS(-O3)
 ENDIF(A_MAKE_OPTIMIZED)
-
-IF(A_MAKE_WX_MONO)
-	SET(WXMONO TRUE)
-ENDIF(A_MAKE_WX_MONO)
 
 if(A_OPTIMIZE_DEM_MEM)
     ADD_DEFINITIONS (-DOPTIMIZE_DEM_MEM)
@@ -117,10 +115,8 @@ if(NOT DEPS_OK)
     MESSAGE("Not all dependencies were satisfied")
 endif(NOT DEPS_OK)
 
-# optionall dependencies
+# optional dependencies
 if(A_WITH_OPTIONAL)
-    INCLUDE (FindMPI)
-    INCLUDE (FindThreads)
     INCLUDE (${MECHSYS_SOURCE_DIR}/Modules/FindOPTDEPS.cmake)
 endif(A_WITH_OPTIONAL)
 
