DEM: Minor changes to Domain:Solve please be advised that now the function Solve does not have the Time>dt condition to report

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ OPTION(A_WITH_OPTIONAL      "Make with optional dependencies"                   
 OPTION(A_USE_MPI            "Compile parallel code with OpenMPI ?"              OFF)
 OPTION(A_USE_VTK            "Use visualisation toolkit ?"                       OFF)
 OPTION(A_USE_WXW            "Use wxWidgets ?"                                   OFF)
-OPTION(A_OPT_DEM_MEM        "Optimize DEM code for memory instead of speed"     OFF)
+OPTION(A_OPT_DEM_MEM        "Optimize DEM code for memory instead of speed"     ON)
 
 # needed when building Debian package
 IF(NOT INSTALL_ROOT)
@@ -73,9 +73,9 @@ IF(A_MAKE_OPTIMIZED)
 	ADD_DEFINITIONS(-O3)
 ENDIF(A_MAKE_OPTIMIZED)
 
-if(A_OPTIMIZE_DEM_MEM)
+IF(A_OPT_DEM_MEM)
     ADD_DEFINITIONS (-DOPTIMIZE_DEM_MEM)
-endif(A_OPTIMIZE_DEM_MEM)
+ENDIF(A_OPT_DEM_MEM)
 
 ### FEATURES ############################################################################################
 
