FEM: test with USigEpsElem added

--- a/tfem/mixed/CMakeLists.txt
+++ b/tfem/mixed/CMakeLists.txt
@@ -17,7 +17,8 @@
 ########################################################################
 
 SET(TESTS
-    mix01)
+    mix01
+    mix02)
 
 FOREACH(var ${TESTS})
     ADD_EXECUTABLE        (${var} "${var}.cpp")
